ncc/testsuite/positive/match-literals-string-equality.n
using Nemerle.IO;

module X {


  public Main () : void {
    def x = "foo3";
    def y = "foo" + 3.ToString ();

    match (Some (x)) {
      | Some ("foo3") => printf ("OK/A\n")
      | _ => ()
    };

    match (Some (y)) {
      | Some ("foo3") => printf ("OK/B\n")
      | _ => ()
    };

    when (x == y) {
      printf ("OK/C\n")
    };

  }

}

/*
BEGIN-OUTPUT
OK/A
OK/B
OK/C
END-OUTPUT
*/
